bin/testsuite/tests/compiler/src/errors/compiler4973.swg
#global testerror "Err0585"

enum A
enum B